test: spaces in fixture file name

--- a/packages/astro/test/fixtures/content-collections/src/content/without-config/promo/launch week.mdx
+++ b/packages/astro/test/fixtures/content-collections/src/content/without-config/promo/launch week.mdx
@@ -5,7 +5,7 @@ publishedDate: 'Sat May 21 2022 00:00:00 GMT-0400 (Eastern Daylight Time)'
 tags: ['announcement']
 ---
 
-import './launch-week-styles.css';
+import './_launch-week-styles.css';
 
 Join us for the space blog launch!
 
